2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NewCSharpExpressionFinder.cs:
	* MonoDevelop.CSharp.Resolver/TextEditorResolverProvider.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  No longer transform the editor contents to text when using
	  the expression finder - the expression finder now uses the
	  text editor directly.

2010-07-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Added
	  check for #else span.

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Refactoring/CSharpRefactorer.cs:
	* MonoDevelop.CSharp.Refactoring/FindMemberAstVisitor.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	  Worked on text edior performance issues / needed to
	  restructure the resolver/member reference collector a bit.

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs: Don't parse
	  method bodies for the MonoDevelop dom (skipping these is
	  much faster & more memory efficient).

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs: Track
	  API changes.

2010-07-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/CSharpParser.cs: Updated to new
	  mcs.

2010-07-19  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: Fixed
	  'Bug 623308 - ArgumentOutOfRangeException after typing ( for
	  method params'.

2010-07-18  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Parser/NRefactoryParser.cs:
	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Highlighting/MoveToUsagesHandler.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	* MonoDevelop.CSharp.Highlighting/HighlightUsagesExtension.cs:
	* MonoDevelop.CSharp.Formatting/CSharpTextEditorIndentation.cs:
	  Track API changes.
